fixed spacing

--- a/site/css/sass/partials/admin/_product-manager-list.scss
+++ b/site/css/sass/partials/admin/_product-manager-list.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    gap: 30px;
 }
 
 .product-list-container {
