--- a/site/css/sass/style.css
+++ b/site/css/sass/style.css
@@ -577,6 +577,7 @@ footer a {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  gap: 30px;
 }
 
 .product-list-container {
